--- a/index.scss
+++ b/index.scss
@@ -18,6 +18,17 @@
     background-color: red;
     background: transparent;
     flex-shrink: 0;
+    height: 100%;
+    width: 300px;
+
+    position: relative;
+    right: 150px;
+}
+.svg-shrinker{
+    width: 30px;
+}
+path{
+    height: 100vh;
 }
 
 .linkList{
