--- a/public/index.scss
+++ b/public/index.scss
@@ -1,3 +1,11 @@
+.template{
+    display: none;
+}
+
+body{
+    display: flex;
+
+}
 .main{
     display: flex;
     height: 100%;
@@ -9,21 +17,18 @@
     object-fit: cover;
 }
 .left, .right{
-    width: 50%;
+    width: 100%;
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.left{
     overflow: hidden;
+    width: 75%;
 }
 
-.svg-holder{
-    background-color: red;
-    background: transparent;
-    flex-shrink: 0;
-    height: 100%;
-    width: 300px;
-
-    position: relative;
-    right: 150px;
-}
 .svg-shrinker{
     width: 30px;
 }
@@ -34,3 +39,5 @@ path{
 .linkList{
     display: flex;
 }
+
+
