--- a/public/projects.scss
+++ b/public/projects.scss
@@ -30,9 +30,27 @@
     background-color: aliceblue;
     width: 100%;
     height: 100%;
+    text-align: center;
 
     transition: .4s opacity ease;
 }
 .project-modal:hover{
     opacity: 1;
+}
+#points{
+    list-style-type: circle;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.project-modal a{
+    background-color: beige;
+
+}
+.project-modal a:hover{
+    background-color: rgb(255, 255, 180);
+}
+.title-header{
+    text-align: center;
 }
