--- a/public/index.scss
+++ b/public/index.scss
@@ -39,6 +39,13 @@ path{
 .linkList{
     display: flex;
 }
-
+.seperator{
+    margin: 25px 0 25px 0;
+    display: block;
+    width: 100%;
+    height: 10vh;
+    background-color: aqua;
+    text-align: center;
+}
 
 
