--- a/public/index.scss
+++ b/public/index.scss
@@ -4,11 +4,12 @@
 
 body{
     display: flex;
+    background-image: url(http://www.webreference.com/dhtml/column8/grid.gif)
 
 }
-.main{
+main{
     display: flex;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 .left >img{
