--- a/public/sidebar.scss
+++ b/public/sidebar.scss
@@ -30,6 +30,7 @@
     height: 100px;
     padding: 20px;
     background-color: rgb(243, 243, 243);
+    box-shadow: 1px 2px 4px grey;
 }
 .sidebar-info{
     // background-image: url("http://res.cloudinary.com/flyakite/image/upload/w_200,h_200,c_fill,g_face,r_max/v1514841885/Artem_Kharshan_1_cmujvq.jpg");
