--- a/public/index.scss
+++ b/public/index.scss
@@ -11,6 +11,7 @@ main{
     display: flex;
     height: 100vh;
     width: 100%;
+    text-align: center;
 }
 .left >img{
     width: 100%;
@@ -41,7 +42,7 @@ path{
     display: flex;
 }
 .seperator{
-    margin: 25px 0 25px 0;
+    margin: 0px 0 25px 0;
     display: block;
     width: 100%;
     height: 10vh;
