--- a/public/index.scss
+++ b/public/index.scss
@@ -4,14 +4,49 @@
 
 body{
     display: flex;
-    background-image: url(http://www.webreference.com/dhtml/column8/grid.gif)
-
+    background-image: url(http://www.webreference.com/dhtml/column8/grid.gif);
+font-family: "Roboto",sans-serif;
 }
+
 main{
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
     height: 100vh;
     width: 100%;
     text-align: center;
+}
+.first-main{
+    margin: 0;
+}
+.about{
+    justify-content: space-around;
+
+}
+.right h4{
+    margin-top: 15px;
+    font-size: 45px;
+    margin: 0;
+}
+.right h5{
+    font-size: 35px;
+    margin-top: 15px;
+        text-decoration: underline;
+    text-decoration-color: aqua;
+}
+.right h1,.right h2,.right h3{
+    font-size: 30px;
+}
+.right span{
+    display: flex;
+}
+.right h2{
+ background-color: aqua;
+}
+.right h3{
+    text-decoration: underline;
+    text-decoration-color: aqua;
 }
 .left >img{
     width: 100%;
@@ -41,13 +76,18 @@ path{
 .linkList{
     display: flex;
 }
+
 .seperator{
-    margin: 0px 0 25px 0;
     display: block;
     width: 100%;
     height: 10vh;
+    min-height: fit-content;
     background-color: aqua;
-    text-align: center;
+    font-size: 60px;
+    font-family: "Roboto",sans-serif;
+    color: white;
+    font-weight: 100;
+    padding-left: 10%;
 }
 
 
