--- a/public/index.scss
+++ b/public/index.scss
@@ -14,8 +14,10 @@ main{
     margin-bottom: 30px;
     display: flex;
     height: 100vh;
+    min-height: fit-content;
     width: 100%;
     text-align: center;
+    justify-content: center;
 }
 .first-main{
     margin: 0;
