--- a/public/sidebar.scss
+++ b/public/sidebar.scss
@@ -35,6 +35,7 @@
 }
 .linklist li a:hover{
     border-left: 5px solid aqua;
+    font-weight: 700;
 }
 
 .sidebar-info{
@@ -44,7 +45,7 @@
     width: 100%;
     height: 100px;
     padding: 20px;
-    background-color: rgb(243, 243, 243);
+    background-color: aqua;
     box-shadow: 1px 2px 4px grey;
 }
 .sidebar-info{
