--- a/public/sidebar.scss
+++ b/public/sidebar.scss
@@ -38,7 +38,7 @@
     font-weight: 700;
 }
 .active{
-    border-left: 50px solid aqua;
+    border-left: 5px solid aqua !important;
     font-weight: 700;
     // background-color: rgba(0, 255, 255, 0.068)
 }
