--- a/public/index.scss
+++ b/public/index.scss
@@ -4,7 +4,7 @@
 
 body{
     display: flex;
-        background-color: #fdfdfd;
+        background-color: #f8f8f8a9;
     background-image:linear-gradient(#f3f3f3, #e0e0e0);
     background-image:       linear-gradient(0deg, transparent 24%,
      rgba(36, 36, 36, 0.034) 25%, rgba(161, 161, 161, 0.05) 26%, transparent 27%, transparent 74%,
@@ -16,6 +16,7 @@ body{
   height:100%;
   background-size:50px 50px;
 font-family: "Roboto",sans-serif;
+color: #333333;
 }
 .unsidebar{
     width: 85vw;
