--- a/public/sidebar.scss
+++ b/public/sidebar.scss
@@ -13,6 +13,7 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
+    min-width: 100px;
     box-shadow: 2px 5px 9px grey;
 }
 .linklist{
