--- a/public/skilllist.scss
+++ b/public/skilllist.scss
@@ -7,6 +7,7 @@
     margin-top: 50px;
     height: fit-content;
     width: 80%;
+    min-width: 280px;
     background-color: white;
 
     box-shadow: 2px 5px 9px grey;
