--- a/public/index.scss
+++ b/public/index.scss
@@ -16,7 +16,7 @@ body{
   height:100%;
   background-size:50px 50px;
 font-family: "Roboto",sans-serif;
-color: #333333;
+color: #1e2638;
 
 }
 .unsidebar{
@@ -129,7 +129,7 @@ path{
     
     padding-left: 30px;
     font-size:30px;
-    color: rgb(219, 142, 42);
+    color: rgb(88, 88, 88);
 }
 .about-me h1{
     font-size:30px;
