--- a/public/projects.scss
+++ b/public/projects.scss
@@ -65,10 +65,13 @@
 }
 .project-modal ul{
     background-color: rgb(245, 245, 245);
+    list-style-position: inside;
+
+    list-style-type: square;
     margin: 0;
     padding: 0;
 }
-.project-modal p{
+.project-modal li{
     margin: 6px;
     padding: 5px;
     background-color: rgb(255, 255, 255);
@@ -77,7 +80,6 @@
 }
 
 #points{
-    list-style-type: circle;
     height: 80%;
     display: flex;
     flex-direction: column;
