--- a/public/sidebar.css
+++ b/public/sidebar.css
@@ -48,7 +48,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     height: 100px;
     padding: 20px;
     background-color: aqua;
