--- a/public/sidebar.css
+++ b/public/sidebar.css
@@ -1,8 +1,9 @@
 .sidebar-sizer{
     height: 100%;
-    width: 15vw;
+    flex: 0 0 15vw;
+    min-width: 15vw;
     position: relative;
-    flex-shrink: 0;
+    /* flex-shrink: 0; */
 }
 
 .sidebar{
@@ -33,34 +34,27 @@
     text-align: center;
     padding: 50px 0 50px 0;
     border-left: 0px solid hsl(180, 100%, 50%);
-    transition:.5s all;
+    transition:.35s all;
 }
 .linklist li a:hover{
     border-left: 5px solid aqua;
     font-weight: 700;
 }
-.active{
-    border-left: 5px solid aqua !important;
-    font-weight: 700;
-    // background-color: rgba(0, 255, 255, 0.068)
-}
+
 .sidebar-info{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* width: 100%; */
+    width: 100%;
     height: 100px;
     padding: 20px;
     background-color: aqua;
     box-shadow: 1px 2px 4px grey;
+    text-align: center;
 }
 .sidebar-info h1{
     font-size: 20px;
-    // background-image: url("http://res.cloudinary.com/flyakite/image/upload/w_200,h_200,c_fill,g_face,r_max/v1514841885/Artem_Kharshan_1_cmujvq.jpg");
-    
-    // background-size: contain;
-    // background-repeat: no-repeat;
-    // background-position: top center;
+
 }
 
 .sidebar-info h5{
@@ -69,3 +63,68 @@
     margin: 5px;
     padding: 5px;
 }
+.active {
+    border-left: 5px solid aqua !important;
+    font-weight: 700;
+}
+
+@media (max-width: 500px) {
+    body{
+        display: inherit;
+        width: 100%;
+        height: 100%;
+    }
+    .sidebar-info{
+        width: fit-content;
+        padding: 0;
+    }
+    .sidebar-sizer{
+        height: 15%;
+        width: 100%;
+    }
+    .sidebar{
+       
+        height: 15%;
+        width: 100%;
+        flex-direction: row;
+        z-index: 100;
+    }
+    .linklist{
+        flex-direction: row;
+        font-size: 90%;
+        justify-content: space-between;
+    }
+
+    .linklist li a{
+        display: flex;
+        height: 100%;
+        width: 100%;
+        box-sizing: border-box;
+        text-align: center;
+        padding: 5px 5% 5px 5%;
+        border-left: 0;
+        border-top: 0px solid hsl(180, 100%, 50%);
+        transition: .35s all;
+        align-items: center;
+
+    }
+
+    .linklist li a:hover{
+        border-left: 0;
+        border-top: 5px solid aqua;
+        font-weight: 700;
+    }
+
+    .active {
+        border-left: 0 !important;
+        border-top: 5px solid aqua !important;
+        font-weight: 700;
+    }
+}
+
+@media (max-width: 360px){
+    .sidebar-info{
+        display: none;
+    }
+}
+
