--- a/public/sidebar.css
+++ b/public/sidebar.css
@@ -76,7 +76,7 @@
     }
     .sidebar-info{
         width: fit-content;
-        padding: 0;
+        padding: 10px 3px 10px 3px;
     }
     .sidebar-sizer{
         height: 15%;
