--- a/public/projects.css
+++ b/public/projects.css
@@ -8,8 +8,8 @@
 }
 .project-list >li{
     position: relative;
-    width: 32%;
-    height: 40%;
+    width: 33%;
+    height: 45%;
     padding: 20px;
     min-width: 262px;
     min-height: 300px;
@@ -31,7 +31,7 @@
 .project-holder h1{
     font-size: 20px;
     font-weight: 700;
-    padding: 10px;
+    padding: 2%;
 }
 .project-holder h2{
     font-size: 16px;
