--- a/public/index.css
+++ b/public/index.css
@@ -23,7 +23,7 @@ color: #1e2638;
     width: 85vw;
 }
 
-main{
+section{
     box-sizing: border-box;
     margin-left: 30px;
     margin-top: 30px;
