--- a/docs/css/projects.css
+++ b/docs/css/projects.css
@@ -1,34 +1,27 @@
 .project-list{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        grid-template-rows: auto;
-        /* display: flex; */
-
-        /* flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 400px;
     box-sizing: border-box;
     justify-content: center
 }
-.project-list ul{
-}
+
 .project-list >li{
     position: relative;
-    /* width: 33%; */
-    /* height: 45%; */
     padding: 20px;
     min-width: 262px;
     min-height: 300px;
-    
 }
 .project-holder{
     width: 100%;
-    height: fit-content;
+    height: 300px;
+    background-color: white;
     font-size: 12px;
     box-shadow: 2px 5px 9px grey;
-
 }
 .project-holder img{
     width: 100%;
-    height: 75%;
+    height: 150px;
     object-fit: cover;
     background-color: rgba(240, 248, 255, 0.295);
 }
@@ -45,6 +38,7 @@
 
 .project-modal{
     display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     z-index: 10;
@@ -55,9 +49,8 @@
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(194, 194, 194);
     width: 100%;
-    height: 100%;
     text-align: center;
-    
+    min-height: 315px;
     text-align: left;
     margin: 5px;
     /* padding-left: 15px; */
@@ -66,8 +59,10 @@
 
     transition: .4s opacity ease;
 }
+.project-holder:hover+.project-modal,
 .project-modal:hover{
     opacity: 1;
+    display: flex;
 }
 
 .project-modal > h1{
