--- a/docs/css/sidebar.css
+++ b/docs/css/sidebar.css
@@ -24,17 +24,16 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-
+    padding-top: 15px;
 }
-.linklist li{
+/* .linklist li{
     height: 100%;
-}
+} */
 .linklist li a{
     display: block;
-    height: 30%;
+    height: 25px;
     box-sizing: border-box;
     text-align: center;
-    padding: 50px 0 50px 0;
     border-left: 0px solid hsl(180, 100%, 50%);
     transition:.35s all;
 }
