--- a/docs/css/skillist.css
+++ b/docs/css/skillist.css
@@ -12,7 +12,10 @@
 
     box-shadow: 2px 5px 9px grey;
 }
-
+.skilllist img{
+    width: 100%;
+    min-height: 69px;
+}
 .skilllist{
     display: flex;
     height: fit-content;
@@ -37,7 +40,7 @@
 .card .title h1{
     margin: 0 5% 0 5%;
     padding-left: 5%;
-    // height: 100px;
+    height: 100px;
     border-bottom: 1px solid lightgray;
     font-size: 50px;
 
